# scaffold

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/actions/ankora-gate/: action.yml
.github/workflows/: ankora.yml  evalgate.yml  publish.yml
examples/: README.md  run_demo.sh  sample_langfuse.json  sample_otel.json
examples/demo/: ankora.yaml
examples/demo/evals/: cairo.yaml  paris.yaml  tokyo.yaml
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
graphify-out/2026-07-06/: .graphify_labels.json  manifest.json
graphify-out/cache/: stat-index.json
src/ankora/: __init__.py  cli.py  config.py  diff.py  models.py  replay.py  storage.py  suites.py
src/ankora/ingest/: __init__.py  langfuse.py  otel.py
src/ankora/providers/: anthropic.py  base.py  echo.py  errors.py  openai.py  registry.py
src/ankora/scorers/: base.py  embedding.py  exact.py  json_schema.py  llm_judge.py  regex.py  registry.py
src/evalgate/: __init__.py  cli.py  config.py  diff.py  models.py  replay.py  storage.py
src/evalgate/ingest/: __init__.py  langfuse.py  otel.py
src/evalgate/providers/: __init__.py  anthropic.py  base.py  openai.py  registry.py
src/evalgate/scorers/: __init__.py  base.py  embedding.py  exact.py  json_schema.py  llm_judge.py  regex.py  registry.py
tests/: test_config.py  test_diff.py  test_echo.py  test_ingest_langfuse.py  test_ingest_otel.py  test_models.py  test_providers.py  test_replay.py  test_scorers.py  test_smoke.py  test_storage.py
