[project]
name = "evalgate"
version = "0.0.1"
description = "Local-first, CI-native regression testing for LLM and agent applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "evalgate contributors" }]
keywords = ["llm", "evaluation", "regression-testing", "ci", "otel", "genai"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "openai>=1.30",
    "anthropic>=0.30",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
evalgate = "evalgate.cli:app"

[project.urls]
Homepage = "https://github.com/evalgate/evalgate"
Repository = "https://github.com/evalgate/evalgate"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalgate"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["evalgate"]

[tool.ruff.lint.flake8-bugbear]
# typer relies on function calls (Option/Argument) in parameter defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
