[project]
name = "ankora"
version = "0.2.1"
description = "Local-first, CI-native regression testing for LLM and agent applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ankora contributors" }]
keywords = ["llm", "evaluation", "regression-testing", "ci", "otel", "genai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "openai>=1.30",
    "anthropic>=0.30",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
ankora = "ankora.cli:app"

[project.urls]
Homepage = "https://github.com/ankora/ankora"
Repository = "https://github.com/ankora/ankora"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ankora"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["ankora"]

[tool.ruff.lint.flake8-bugbear]
# typer relies on function calls (Option/Argument) in parameter defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
