[project]
name = "ankora"
version = "0.2.2"
description = "Local-first, CI-native regression testing for LLM and agent applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ankora contributors" }]
keywords = ["llm", "evaluation", "regression-testing", "ci", "otel", "genai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "openai>=1.30",
    "anthropic>=0.30",
    "rich>=13",
    "pyyaml>=6",
    "jsonschema>=4.18",
]

[project.scripts]
ankora = "ankora.cli:app"

[project.urls]
Homepage = "https://github.com/yajan011/ankora"
Repository = "https://github.com/yajan011/ankora"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ankora"]

[tool.hatch.build.targets.sdist]
# Keep internal/dev artifacts out of the published distribution.
exclude = ["graphify-out/", "uv.lock", "logo.png", ".github/"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["ankora"]

[tool.ruff.lint.flake8-bugbear]
# typer relies on function calls (Option/Argument) in parameter defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
